fix course + add new content

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "description": "## Sources",
-  "main": "index.js",
+  "description": "Learn the basics of Node.js with examples",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
